// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return theme data for slug 8-depart-de-lentreprise 1`] = `
Object {
  "breadcrumbs": null,
  "children": Array [
    Object {
      "slug": "80-documents-a-remettre-au-salarie",
      "title": "Documents à remettre au salarié",
    },
    Object {
      "slug": "81-demission",
      "title": "Démission",
    },
    Object {
      "slug": "82-fin-dun-cdd-ctt",
      "title": "Fin d'un CDD - CTT",
    },
    Object {
      "slug": "83-rupture-conventionnelle",
      "title": "Rupture conventionnelle",
    },
    Object {
      "slug": "84-licenciement",
      "title": "Licenciement",
    },
    Object {
      "slug": "85-retraite",
      "title": "Retraite",
    },
    Object {
      "slug": "86-autres-departs",
      "title": "Autres départs",
    },
  ],
  "position": 8,
  "refs": Array [
    Object {
      "source": "external",
      "title": "Le salarié peut-il s’absenter pour rechercher un emploi pendant son préavis ?",
      "url": "/contribution/le-salarie-peut-il-sabsenter-pour-rechercher-un-emploi-pendant-son-preavis",
    },
    Object {
      "source": "external",
      "title": "Quelles sont les conséquences du non-respect du préavis par le salarié ou l'employeur ?",
      "url": "/contribution/quelles-sont-les-consequences-du-non-respect-du-preavis-par-le-salarie-ou-lemployeur",
    },
    Object {
      "source": "external",
      "title": "Arrêt maladie pendant le préavis : quelles conséquences ?",
      "url": "/contribution/arret-maladie-pendant-le-preavis-quelles-consequences",
    },
    Object {
      "source": "external",
      "title": " Quelle est la durée de préavis en cas de mise à la retraite ?",
      "url": "/contribution/quelle-est-la-duree-de-preavis-en-cas-de-mise-a-la-retraite",
    },
    Object {
      "source": "external",
      "title": "Heures pour recherche d’emploi",
      "url": "/outils/heures-recherche-emploi",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/le-salarie-beneficie-t-il-dheures-de-recherche-demploi-pendant-son-preavis",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/peut-on-garder-la-mutuelle-de-lentreprise-a-la-fin-du-contrat-de-travail",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/indemnite-compensatrice-de-preavis",
    },
    Object {
      "source": "external",
      "title": "",
      "url": "/fiche-service-public/indemnite-compensatrice-de-conges-payes",
    },
    Object {
      "source": "external",
      "title": "Démission, licenciement : peut-on travailler ailleurs avant la fin du préavis ?",
      "url": "/fiche-service-public/demission-licenciement-peut-on-travailler-ailleurs-avant-la-fin-du-preavis",
    },
  ],
  "slug": "8-depart-de-lentreprise",
  "title": "Départ de l'entreprise",
}
`;

exports[`return themes root themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "slug": "80-documents-a-remettre-au-salarie",
          "title": "Documents à remettre au salarié",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
        Object {
          "slug": "82-fin-dun-cdd-ctt",
          "title": "Fin d'un CDD - CTT",
        },
        Object {
          "slug": "83-rupture-conventionnelle",
          "title": "Rupture conventionnelle",
        },
        Object {
          "slug": "84-licenciement",
          "title": "Licenciement",
        },
        Object {
          "slug": "85-retraite",
          "title": "Retraite",
        },
        Object {
          "slug": "86-autres-departs",
          "title": "Autres départs",
        },
      ],
      "icon": "Depart",
      "position": 8,
      "slug": "8-depart-de-lentreprise",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;
